Tweak to skip link focus outline to ensure it is "inside" the skip link background and so there can be no contrast issues with adjacent elements

--- a/src/scss/init/_variables.scss
+++ b/src/scss/init/_variables.scss
@@ -345,11 +345,10 @@ $link-skip: (
     default: $charcoal
   ),
   text-decoration: (
-    default: underline
+    default: none,
   ),
-  text-underline-offset: 3px,
   outline: 3px solid #ff0,
-  outline-offset: -3px,
+  outline-offset: -6px,
   opacity: (
     default: 0,
     hover: 1,
